Fixed div overlapping

--- a/style.css
+++ b/style.css
@@ -121,11 +121,11 @@ body {
 }
 
 #quoteForm{
-  background-color: rgba(0, 120, 20, 1);
   background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 10%, rgba(0, 0, 0, 0) 59%, rgba(255, 255, 255, 1) 90%), url('img/lawn.jpg'), no-repeat;
   background-clip: border-box;
   background-size: cover;
-  height: 100vh;
+  height: fit-content;
+  min-height: 100vh;
   width: 100vw;
   padding: 3rem;
 }
@@ -134,17 +134,10 @@ body {
   width: 80vw;
 }
 
-.image-container {
-}
-
 .img-card > img {
   object-fit: cover;
   height: 400px;
   width: 100%;
-}
-
-.img-card {
-
 }
 
 .gif {
@@ -319,9 +312,18 @@ figure {
   height: 100%;
 }
 
+.invalid-feedback{
+  color: rgb(55, 2, 2);
+  background-color: rgba(244, 210, 210, 1);
+  width: fit-content;
+  border: .5px solid  rgba(169, 118, 118, 0.7);
+  border-radius: 5px 5px 5px 5px;
+  padding: .2rem;
+  align-self: center;
+}
+
 
 #captcha-info, #captcha-expired, #captcha-error, #captcha-failed{
-  color:red !important;
   display: none;
 }
 
